--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             --timeline-color: #3498db;
             --h1-color: #f5f7fa;
             --h2-border: #3498db;
-            --h4-hover: #3498db;
+            --h4-hover: #a67c00;
         }
 
         body {
