--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 <div class="project-block">
     <h4>Freelance Projects</h4>
     <ul>
-        <li>Cosmetics Market Research &amp; Lead Generation (Excel, Powerpoint) - Remote</li>
-        <li>Research on Associations   &amp; Lead Generation (Google Sheets) - Remote</li>
+        <li>Cosmetics Market Research &amp; Data Entry (Excel, Powerpoint) - Remote</li>
+        <li>Research on Associations   &amp; Data Analysis (Google Sheets) - Remote</li>
         <li>Cashflow, Invoice &amp; Fuel, Payment Logs Management (Word, Excel)</li>
     </ul>
 </div>
