--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <h3>Resume</h3>
 
     <h2>Profile Summary</h2>
-    <p>I am Oswald Amoah, a results-oriented freelancer with a strong background in technology and management.<br> My leadership abilities are evident in my previous roles such as IT Department Head, SWE Team Lead, and Data Management Specialist.<br> I'm currently pursuing a BSc. in Computer Science at the University of Ghana, and I am eager to apply my skills to solve more real-world problems.</p>
+    <p>I am Oswald Amoah, a results-oriented resource with a strong background in technology and management.<br> I am currently pursuing a BSc. in Computer Science at the University of Ghana, and I aim to apply my skills to solve more real-world problems.</p>
 
     <h2>Education</h2>
     <ul>
@@ -231,7 +231,7 @@
     <h2>Technical Skills</h2>
     <ul> 
         <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, <br> ASP.NET Core, SQL, AWS, API Development.</li>
-        <li><strong>Mobile App Development:</strong> ReactNative</li>
+        <li><strong>Mobile App Development:</strong> ReactNative, PWAs</li>
         <li><strong>Other Languages:</strong> C#, C++, Python, Javascript, Java</li>
         <li><strong>Agile Project Management:</strong> Trello, Jira, Research, Analysis</li>
         <li><strong>Office Productivity Tools:</strong> Microsoft Office Suite, Google Workspace</li>
@@ -241,16 +241,16 @@
 
     <div class="experience-block">
     <h4>Technical Team Lead - Flourishing Field International <span class="timeline">(2020 - Present)</span></h4>
-    <p>Led 15+ member team in data/AV management. Developed member management system improving productivity by 40%. Automated messaging for 500+ members.</p>
+    <p>Led 10-15 member team in data/AV management. Developed member management system improving organizational process productivity by 40%. Automated messaging for 200+ members.</p>
 </div>
 
 <div class="experience-block">
     <h4>Freelancer | Data Management &amp; Research - UpWork <span class="timeline">(2023 - Present)</span></h4>
-    <p>Deliver high-quality results through effective client communication and thorough project documentation.</p>
+    <p>I deliver high-quality results through effective client communication and thorough project documentation.</p>
 </div>
 
 <div class="experience-block">
-    <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - Present)</span></h4>
+    <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - March 2025)</span></h4>
     <p>Software development with AI implementation focus. Work on personal projects with organizational support.</p>
 </div>
 
@@ -260,7 +260,7 @@
 </div>
 
 <div class="experience-block">
-    <h4>Web &amp; App Development Intern - El Cuto Consult <span class="timeline">(2024)</span></h4>
+    <h4>Software Development Intern - El Cuto Consult <span class="timeline">(2024)</span></h4>
     <p>Implemented USSD services and ASP.NET CORE applications. Contributed to website updates.</p>
 </div>
 
@@ -281,7 +281,7 @@
 </div>
 
 <div class="project-block">
-    <h4>Freelance Projects</h4>
+    <h4>Contract Projects</h4>
     <ul>
         <li>Cosmetics Market Research &amp; Data Entry (Excel, Powerpoint) - Remote</li>
         <li>Research on Associations   &amp; Data Analysis (Google Sheets) - Remote</li>
@@ -305,12 +305,18 @@
     </ul>
 </div>
 
+    <div class="project-block">
+    <h4>Contract Projects</h4>
+    <ul>
+        <li><a href="https://www.homzandkidz.store">HomzAndKidz Store</a></li>
+    </ul>
+</div>
 <div class="project-block">
     <h4>Personal Projects</h4>
     <ul>
         <li><a href="https://github.com/oswaldamoah/q-mgmt">Queue Management Embedded System</a></li>
+        <li><a href="https://github.com/oswaldamoah/expensetracker">Civil to Cable Distance Converter</a></li>
         <li><a href="https://github.com/oswaldamoah/UG-GradeReport">Student Grade Report Web App</a></li>
-        <li><a href="https://github.com/oswaldamoah/expensetracker">Expenses Tracker Web App</a></li>
         <li><a href="https://github.com/oswaldamoah/shopping-mobileapp">API-Integrated Shopping App</a></li>
         <li><a href="https://github.com/MichaelAdadey/didiyie">Smart Restaurant Menu App</a></li>
     </ul>
