Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
     <h4>Contract Projects</h4>
     <ul>
         <li><a href="https://www.homzandkidz.store">HomzAndKidz Store</a></li>
+        <li>
+        <details>
+         <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
+         <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and built a civil-to-cable distance automation tool to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
+          </li>
+        </details>
     </ul>
 </div>
 <div class="project-block">
@@ -364,3 +370,4 @@
 </script>
 </body>
 </html>
+
