Refactor index.html for improved layout and styles
Updated HTML structure and styling for resume page.

--- a/index.html
+++ b/index.html
@@ -283,13 +283,20 @@
     <div class="project-block">
     <h4>Contract Projects</h4>
     <ul>
-        <li><a href="https://www.homzandkidz.store">HomzAndKidz Store</a></li>
         <li>
-        <details>
-         <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
-         <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and built a civil-to-cable distance automation tool to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
-        </details>
-        </li>
+  <details>
+    <summary>HomzAndKidz Store (2025)</summary>
+    <p>Built and manage an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.</p>
+  </details>
+</li>
+
+<li>
+  <details>
+    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
+    <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and built a civil-to-cable distance automation tool to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
+  </details>
+</li>
+
     </ul>
 </div>
 <div class="project-block">
@@ -370,5 +377,6 @@
 </script>
 </body>
 </html>
+
 
 
