--- a/index.html
+++ b/index.html
@@ -273,6 +273,25 @@
 
 <h3>Web &amp; Mobile App Development</h3>
 <div class="project-block">
+       <div class="project-block">
+    <h4>Contract Projects</h4>
+    <ul>
+        <li>
+  <details>
+    <summary>HomzAndKidz Store (2024 – Present)</summary>
+    <p>Built and manage <a href="https://www.homzandkidz.store">HomzAndKidz Store</a>, an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.</p>
+  </details>
+</li>
+
+<li>
+  <details>
+    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
+    <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and developed a <a href="https://github.com/oswaldamoah/civiltocable">civil-to-cable distance automation tool</a> to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
+  </details>
+</li>
+    </ul>
+</div>
+    
     <h4>Volunteer Projects</h4>
     <ul>
         <li><a href="https://github.com/oswaldamoah/mms">Member Management Service (MMS) - FFI</a></li>
@@ -280,25 +299,7 @@
     </ul>
 </div>
 
-    <div class="project-block">
-    <h4>Contract Projects</h4>
-    <ul>
-        <li>
-  <details>
-    <summary>HomzAndKidz Store (2025)</summary>
-    <p>Built and manage an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.</p>
-  </details>
-</li>
-
-<li>
-  <details>
-    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
-    <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and built a civil-to-cable distance automation tool to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
-  </details>
-</li>
-
-    </ul>
-</div>
+ 
 <div class="project-block">
     <h4>Personal Projects</h4>
     <ul>
@@ -377,6 +378,7 @@
 </script>
 </body>
 </html>
+
 
 
 
