Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -276,17 +276,23 @@
        <div class="project-block">
     <h4>Contract Projects</h4>
     <ul>
-        <li>
+       <li>
   <details>
     <summary>HomzAndKidz Store (2024 – Present)</summary>
-    <p>Built and manage <a href="https://www.homzandkidz.store">HomzAndKidz Store</a>, an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.</p>
+    <p>Built and manage 
+      <a href="https://www.homzandkidz.store" target="_blank" rel="noopener noreferrer">HomzAndKidz Store</a>, 
+      an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.
+    </p>
   </details>
 </li>
 
 <li>
   <details>
     <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
-    <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and developed a <a href="https://github.com/oswaldamoah/civiltocable">civil-to-cable distance automation tool</a> to streamline broadband expansion for MTN’s GPON Project with GESL.</p>
+    <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and developed a 
+      <a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">civil-to-cable distance automation tool</a> 
+      to streamline broadband expansion for MTN’s GPON Project with GESL.
+    </p>
   </details>
 </li>
     </ul>
@@ -378,6 +384,7 @@
 </script>
 </body>
 </html>
+
 
 
 
