Update resume HTML structure and styles
The HTML structure and styles for Oswald Amoah's resume have been updated, including theme management and content adjustments.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <ul>
        <li>
   <details>
-    <summary>HomzAndKidz Store (2024 – Present)</summary>
+    <summary>HomzAndKidz Store (2025)</summary>
     <p>Built and manage 
       <a href="https://www.homzandkidz.store" target="_blank" rel="noopener noreferrer">HomzAndKidz Store</a>, 
       an e-commerce platform offering household and kids’ products. Implemented WooCommerce integration, custom product filters, and automated order workflows to improve user experience and streamline operations.
@@ -384,6 +384,7 @@
 </script>
 </body>
 </html>
+
 
 
 
