Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="https://www.svgrepo.com/show/406076/letter-o.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oswald Amoah | Resume</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -384,6 +385,7 @@
 </script>
 </body>
 </html>
+
 
 
 
