--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <h2>Education</h2>
     <ul>
         <li><strong>University of Ghana <span class="timeline">(Class of 2026)</span></strong> <br>BSc. Computer Science </li>
-        <li><strong>Ghana Christian International High School <span class="timeline">(2019-2022)</span></strong> <br><a href="https://drive.google.com/file/d/1MEFN4PJZVPf4Sl2HcfgZrEI_0UGOnvJE/view?usp=sharing" target="_blank" rel="noopener noreferrer">High School Diploma (SAT, WASSCE)</a><br><a href="https://www.credly.com/badges/8e398e1c-1042-4fcc-b730-8d5af5a4846b/public_url" target="_blank" rel="noopener noreferrer">IC3 Digital Literacy Certification</a> </li>
+        <li><strong>Ghana Christian International High School <span class="timeline">(2019-2022)</span></strong> <br><a href="https://drive.google.com/file/d/1MEFN4PJZVPf4Sl2HcfgZrEI_0UGOnvJE/" target="_blank" rel="noopener noreferrer">High School Diploma (SAT, WASSCE)</a><br><a href="https://www.credly.com/badges/8e398e1c-1042-4fcc-b730-8d5af5a4846b/public_url" target="_blank" rel="noopener noreferrer">IC3 Digital Literacy Certification</a> </li>
     </ul>
 
     <h2>Technical Skills</h2>
@@ -416,6 +416,7 @@
 </script>
 </body>
 </html>
+
 
 
 
