--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Oswald Amoah | Resume</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
+    <!--- Google Console Verification --->
+    <meta name="google-site-verification" content="CFOrdiXA5SIOw6beiqY7fPKrm1OUP-Wq5IKVzB5YQ40" />
+
     <!-- ✅ SEO Meta Tags -->
     <meta name="description" content="Portfolio and resume of Oswald Amoah, a full-stack developer skilled in web development, mobile apps, AutoCAD design, data management, AI, and project leadership.">
     <meta name="keywords" content="Oswald Amoah, developer, software engineer, fullstack, web developer, mobile app developer, ReactJS, NodeJS, Python, Java, C++, AutoCAD, FTTH, GPON, AI, e-commerce, WooCommerce, Ghana, resume, portfolio">
@@ -418,6 +421,7 @@
 </script>
 </body>
 </html>
+
 
 
 
