Revise index.html for updated resume details
Updated the resume content and improved formatting.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 </div>
 
 <div class="experience-block">
-    <h4>Freelancer | Data Management &amp; Research - UpWork <span class="timeline">(2023 - Present)</span></h4>
+    <h4>Freelancer | Software Development &amp; Research - Project Palace <span class="timeline">(June 2025 - Present)</span></h4>
     <p>I deliver high-quality results through effective client communication and thorough project documentation.</p>
 </div>
 
@@ -347,7 +347,7 @@
     <h4>Personal Projects</h4>
     <ul>
         <li><a href="https://github.com/oswaldamoah/q-mgmt" target="_blank" rel="noopener noreferrer">Queue Management Embedded System</a></li>
-        <li><a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">Civil to Cable Distance Converter</a></li>
+        <li><a href="https://github.com/oswaldamoah/free-plagiarism-checker" target="_blank" rel="noopener noreferrer">Free Plagiarism Checker</a></li>
         <li><a href="https://github.com/oswaldamoah/UG-GradeReport" target="_blank" rel="noopener noreferrer">Student Grade Report Web App</a></li>
         <li><a href="https://github.com/oswaldamoah/shopping-mobileapp" target="_blank" rel="noopener noreferrer">API-Integrated Shopping App</a></li>
         <li><a href="https://github.com/MichaelAdadey/didiyie" target="_blank" rel="noopener noreferrer">Smart Restaurant Menu App</a></li>
@@ -366,8 +366,8 @@
 <div class="project-block">
     <h4>Contract Projects</h4>
     <ul>
-        <li>Cosmetics Market Research &amp; Data Entry (Excel, Powerpoint) - Remote</li>
-        <li>Research on Associations   &amp; Data Analysis (Google Sheets) - Remote</li>
+        <li>Cosmetics Market Research &amp; Data Entry (Excel, Powerpoint) - UpWork</li>
+        <li> OSINT on Associations   &amp; Data Analysis (Google Sheets) - UpWork</li>
         <li>Cashflow, Invoice &amp; Fuel, Payment Logs Management (Word, Excel)</li>
     </ul>
 </div>
@@ -421,6 +421,7 @@
 </script>
 </body>
 </html>
+
 
 
 
