Restore and update index.html for resume
Restored and updated the HTML structure, including meta tags, styles, and content for Oswald Amoah's resume.

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 </div>
 
 <div class="experience-block">
-    <h4>Freelancer | Software Development &amp; Research - Project Palace <span class="timeline">(June 2025 - Present)</span></h4>
+    <h4>Freelancer - Project Palace <span class="timeline">(June 2025 - Present)</span></h4>
     <p>I deliver high-quality results through effective client communication and thorough project documentation.</p>
 </div>
 
@@ -421,6 +421,7 @@
 </script>
 </body>
 </html>
+
 
 
 
