Revise resume details and update experience sections
Updated the resume content and structure, including roles and responsibilities.

--- a/index.html
+++ b/index.html
@@ -276,22 +276,17 @@
     <h2 class="visually-hidden">Professional Experience in Software Development, Research, and Project Leadership</h2>
     <div class="experience-block">
     <h4>Technical Team Lead - Flourishing Field International <span class="timeline">(2020 - Present)</span></h4>
-    <p>Led 10-15 member team in data/AV management. Developed member management system improving organizational process productivity by 40%. Automated messaging for 200+ members.</p>
+    <p>Coordinate technical operations across data, multimedia, and software units. Led teams of 10–15 in structured weekly tasks, improving workflow clarity and execution. Developed a member management system that enhanced internal processes and automated communication</p>
 </div>
 
 <div class="experience-block">
-    <h4>Freelancer - Project Palace <span class="timeline">(June 2025 - Present)</span></h4>
-    <p>I deliver high-quality results through effective client communication and thorough project documentation.</p>
+    <h4>Product Manager - BitByBit <span class="timeline">(2023 - Present)</span></h4>
+    <p>Led product development initiatives across design and engineering teams, translating requirements into functional web experiences. Supported delivery by contributing full-stack development expertise, including a tailored routing system that streamlined operational workflows.</p>
 </div>
 
 <div class="experience-block">
-    <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - March 2025)</span></h4>
-    <p>Software development with AI implementation focus. Work on personal projects with organizational support.</p>
-</div>
-
-<div class="experience-block">
-    <h4>Fullstack Developer - BitByBit Developers <span class="timeline">(2023 - 2024)</span></h4>
-    <p>Collaborated across teams to build applications. Developed Specialized Map Routing Service.</p>
+    <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Oct. 2024 - Dec. 2024)</span></h4>
+    <p>Documented meetings, updated user stories/workflows, and created technical reports.</p>
 </div>
 
 <div class="experience-block">
@@ -300,13 +295,17 @@
 </div>
 
 <div class="experience-block">
-    <h4>Technical Writer - Project Team, Department of Computer Science, University of Ghana <span class="timeline">(Oct. 2024 - Dec. 2024)</span></h4>
-    <p>Documented meetings, updated user stories/workflows, and created technical reports.</p>
+    <h4>Intern - Headstarter AI Ghana <span class="timeline">(Nov. 2024 - March 2025)</span></h4>
+    <p>Software development with AI implementation focus. Work on personal projects with organizational support.</p>
+</div>
+
+<div class="experience-block">
+    <h4>Freelancer - Project Palace <span class="timeline">(June 2025 - Present)</span></h4>
+    <p>I deliver high-quality results through effective client communication and thorough project documentation.</p>
 </div>
 
    <h2>Key Projects</h2>
 
-<h3>Web &amp; Mobile App Development</h3>
 <div class="project-block">
        <div class="project-block">
     <h4>Contract Projects</h4>
