Revise SEO meta tags and project details
Updated SEO meta tags and improved project descriptions.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="CFOrdiXA5SIOw6beiqY7fPKrm1OUP-Wq5IKVzB5YQ40" />
 
     <!-- ✅ SEO Meta Tags -->
-    <meta name="description" content="Portfolio and resume of Oswald Amoah, a full-stack developer skilled in web development, mobile apps, AutoCAD design, data management, AI, and project leadership.">
-    <meta name="keywords" content="Oswald Amoah, developer, software engineer, fullstack, web developer, mobile app developer, ReactJS, NodeJS, Python, Java, C++, AutoCAD, FTTH, GPON, AI, e-commerce, WooCommerce, Ghana, resume, portfolio">
+    <meta name="description" content="Portfolio and resume of Oswald Amoah, a full-stack developer and project lead skilled in web development, mobile apps, AutoCAD design, data management, AI, and project leadership.">
+    <meta name="keywords" content="Oswald Amoah, developer, software engineer, fullstack, web developer, mobile app developer, project manager, project lead, Ghana, Africa ReactJS, NodeJS, Python, Java, C++, AutoCAD, FTTH, GPON, AI, e-commerce, WooCommerce, Ghana, resume, portfolio">
     <meta name="author" content="Oswald Amoah">
 
     <!-- Open Graph for social/SEO -->
@@ -263,12 +263,13 @@
     </ul>
 
     <h2>Technical Skills</h2>
-    <h2 class="visually-hidden">Programming, Web Development, Mobile Apps, Data Analysis, AutoCAD, AI</h2>
+    <h2 class="visually-hidden">Programming, Web Development, Mobile Apps, Project Management Data Analysis, AutoCAD, AI</h2>
     <ul> 
+         <li><strong>Project Management:</strong> Jira, Trello, Communication, Problem-Solving</li>
         <li><strong>Web Development:</strong> ReactJS, MongoDB, ExpressJS, NodeJS, <br> ASP.NET Core, SQL, AWS, API Development.</li>
         <li><strong>Mobile App Development:</strong> ReactNative, PWAs</li>
         <li><strong>Other Languages:</strong> C#, C++, Python, Javascript, Java</li>
-        <li><strong>Agile Project Management:</strong> Trello, Jira, Research, Analysis</li>
+        <li><strong>Other Skills:</strong> AutoCAD, Research</li>
         <li><strong>Office Productivity Tools:</strong> Microsoft Office Suite, Google Workspace</li>
     </ul>
 
@@ -396,6 +397,7 @@
 </script>
 </body>
 </html>
+
 
 
 
