Restore full index.html content
Restored the index.html file with the complete content and structure, including meta tags, styles, and body content.

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
 
     <h2>Contact</h2>
     <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank" rel="noopener noreferrer">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info"><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/oswaldamoah" target="_blank" rel="noopener noreferrer">linkedin.com/in/oswaldamoah</a></p>
-    <p class="contact-info"><strong>Other: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank" rel="noopener noreferrer">lnk.bio/oswaldamoah</a></p>
+    <p class="contact-info"><strong>Resume (Link): </strong> <a href="https://oswaldamoah.vercel.app/" target="_blank" rel="noopener noreferrer">oswaldamoah.vercel.app/</a></p>
+    <p class="contact-info"><strong>Other Links: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank" rel="noopener noreferrer">lnk.bio/oswaldamoah</a></p>
 </div>
 
 
@@ -397,6 +397,7 @@
 </script>
 </body>
 </html>
+
 
 
 
