Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <h2 class="visually-hidden">
             African Tech Freelancer Available for Remote Work | Full-Stack Software Engineer, Research, Project Management, SaaS & Telecom Projects
        </h2>
-    <p>I am Oswald Amoah, a results-oriented resource with a strong background in technology and management.<br> I am currently pursuing a BSc. in Computer Science at the University of Ghana, and I aim to apply my skills to solve more real-world problems.</p>
+    <p>I am <a href="https://www.linkedin.com/in/oswaldamoah/" target="_blank" rel="noopener noreferrer">Oswald Amoah</a>, a results-oriented resource with a strong background in technology and management.<br> I am currently pursuing a BSc. in Computer Science at the University of Ghana, and I aim to apply my skills to solve more real-world problems.</p>
 
     <h2>Education</h2>
     <ul>
@@ -332,6 +332,18 @@
     </p>
   </details>
 </li>
+ <br>
+<li>
+  <details>
+       <h2 class="visually-hidden">FTTH Survey & AutoCAD GPON Design in Ghana | Civil-to-Cable Distance Automation Tool</h2>
+    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
+    <p>Built and manage  <a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">Gold Coast Cooking Class</a>, a private Ghanaian culinary experience in Accra. 
+        Structured the service flow from market tours to hands-on cooking, organized customizable menu selections, 
+        and optimized booking via WhatsApp and email to create a seamless, high-conversion experience.
+      to streamline broadband expansion for MTN’s GPON Project with GESL.
+    </p>
+  </details>
+</li>
     </ul>
 </div>
     
@@ -339,6 +351,8 @@
     <ul>
         <li><a href="https://github.com/oswaldamoah/mms" target="_blank" rel="noopener noreferrer">Member Management Service (MMS) - FFI</a></li>
         <li><a href="http://github.com/oswaldamoah/11046928_DCIT_205_IA" target="_blank" rel="noopener noreferrer">Website for UG Department of Computer Science</a></li>
+        <li><a href="https://mindfulcircle.vercel.app/" target="_blank" rel="noopener noreferrer">Mindful Circle - Support Mental Health</a></li>
+
     </ul>
 </div>
 
@@ -356,7 +370,8 @@
 
     <h2>Contact</h2>
     <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank" rel="noopener noreferrer">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info"><strong>Resume (Link): </strong> <a href="https://oswaldamoah.vercel.app/" target="_blank" rel="noopener noreferrer">oswaldamoah.vercel.app/</a></p>
+    <p class="contact-info"><strong>GitHub: </strong> <a href="https://github.com/oswaldamoah/" target="_blank" rel="noopener noreferrer">@oswaldamoah//</a></p>
+    <p class="contact-info"><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/oswaldamoah/" target="_blank" rel="noopener noreferrer">Oswald Amoah</a></p>
     <p class="contact-info"><strong>Other Links: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank" rel="noopener noreferrer">lnk.bio/oswaldamoah</a></p>
 </div>
 
@@ -397,6 +412,7 @@
 </script>
 </body>
 </html>
+
 
 
 
