Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <h2 class="visually-hidden">
             African Tech Freelancer Available for Remote Work | Full-Stack Software Engineer, Research, Project Management, SaaS & Telecom Projects
        </h2>
-    <p>I am <a href="https://www.linkedin.com/in/oswaldamoah/" target="_blank" rel="noopener noreferrer">Oswald Amoah</a>, a results-oriented resource with a strong background in technology and management.<br> I am currently pursuing a BSc. in Computer Science at the University of Ghana, and I aim to apply my skills to solve more real-world problems.</p>
+    <p>I am <a href="https://www.linkedin.com/in/oswaldamoah/" target="_blank" rel="noopener noreferrer">Oswald Amoah</a>, a results-oriented resource with a strong background in technology and management.<br> I am currently pursuing a BSc. in Computer Science at the University of Ghana, and I aim to apply my skills to solve more real-world challenges</p>
 
     <h2>Education</h2>
     <ul>
@@ -412,6 +412,7 @@
 </script>
 </body>
 </html>
+
 
 
 
