--- a/index.html
+++ b/index.html
@@ -335,12 +335,11 @@
  <br>
 <li>
   <details>
-       <h2 class="visually-hidden">FTTH Survey & AutoCAD GPON Design in Ghana | Civil-to-Cable Distance Automation Tool</h2>
+       <h2 class="visually-hidden">Gold Coast Cooking Class | Cooking Class In Ghana</h2>
     <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
     <p>Built and manage  <a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">Gold Coast Cooking Class</a>, a private Ghanaian culinary experience in Accra. 
         Structured the service flow from market tours to hands-on cooking, organized customizable menu selections, 
         and optimized booking via WhatsApp and email to create a seamless, high-conversion experience.
-      to streamline broadband expansion for MTN’s GPON Project with GESL.
     </p>
   </details>
 </li>
@@ -370,7 +369,7 @@
 
     <h2>Contact</h2>
     <p class="contact-info"><strong>Email: </strong><a href="mailto:oswaldamoah00@gmail.com" target="_blank" rel="noopener noreferrer">oswaldamoah00@gmail.com</a></p>
-    <p class="contact-info"><strong>GitHub: </strong> <a href="https://github.com/oswaldamoah/" target="_blank" rel="noopener noreferrer">@oswaldamoah//</a></p>
+    <p class="contact-info"><strong>GitHub: </strong> <a href="https://github.com/oswaldamoah/" target="_blank" rel="noopener noreferrer">@oswaldamoah</a></p>
     <p class="contact-info"><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/oswaldamoah/" target="_blank" rel="noopener noreferrer">Oswald Amoah</a></p>
     <p class="contact-info"><strong>Other Links: </strong><a href="https://lnk.bio/oswaldamoah" target="_blank" rel="noopener noreferrer">lnk.bio/oswaldamoah</a></p>
 </div>
@@ -412,6 +411,7 @@
 </script>
 </body>
 </html>
+
 
 
 
