Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 <li>
   <details>
        <h2 class="visually-hidden">Gold Coast Cooking Class | Cooking Class In Ghana</h2>
-    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
-    <p>Built and manage  <a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">Gold Coast Cooking Class</a>, a private Ghanaian culinary experience in Accra. 
+    <summary>Gold Coast Cooking Class Website (2026)</summary>
+    <p>Built and manage  <a href="https://goldcoastcookingclass.vercel.app/" target="_blank" rel="noopener noreferrer">Gold Coast Cooking Class</a>, a private Ghanaian culinary experience in Accra. 
         Structured the service flow from market tours to hands-on cooking, organized customizable menu selections, 
         and optimized booking via WhatsApp and email to create a seamless, high-conversion experience.
     </p>
@@ -411,6 +411,7 @@
 </script>
 </body>
 </html>
+
 
 
 
